# Null-Pointer

./: .gitignore  AGENTS.md  CLAUDE.md  NHIP_VIEN_GIAI_PHAP_CHI_TIET.md  README.md  compose.yaml  ideal.md  ui-benh-nhan.md  ui.md
.github/workflows/: deploy.yml
ai/: .env.example  AGENTS.md  Dockerfile  README.md  pyproject.toml
ai/config/: governance-policy.yaml  models.yaml
ai/src/nhip_vien_ai/: __init__.py  config.py  contracts.py  main.py
ai/src/nhip_vien_ai/api/: __init__.py  router.py
ai/src/nhip_vien_ai/governance/: __init__.py  policy.py
ai/src/nhip_vien_ai/services/: __init__.py  route_optimizer.py  wait_time_estimator.py
ai/tests/: test_api.py  test_health.py  test_route_optimizer.py
backend/: .env.example  AGENTS.md  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: test_clinical_order_activity.py  test_clinical_order_dispatch.py  test_health.py  test_indoor_navigation.py  test_patient_activity_log.py  test_patient_order_integration.py  test_patient_registry.py  test_reservations.py  test_route_proposals.py  test_routing_optimizer.py  test_simulation_room_management.py  test_simulation_service.py  test_standard_data_import.py  test_support.py
docs/: README.md  glossary.md
docs/architecture/: project-structure.md  system-architecture.md
docs/development/: cloud-backend-data.md  getting-started.md  gitnexus-workflow.md  patient-flow-integration.md  (+1 more)
frontend/: .env.example  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  vitest.config.ts
giaodien/: README.md  index.css  index.html
(+171 files in other folders)
