[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "nhip-vien-ai"
version = "0.1.0"
description = "Dịch vụ xếp hạng lộ trình và dự báo thời gian chờ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.7,<3",
  "pyyaml>=6.0,<7",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nhip_vien_ai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
